--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==22.10.0
 click==8.1.3
 Django==4.1.1
 django-crispy-forms==1.14.0
+django-environ==0.9.0
 mypy-extensions==0.4.3
 pathspec==0.10.1
 platformdirs==2.5.2
